--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image" href="./src/assets/frontend_assets/newlogo.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fashion_x || clouthing</title>
+    <title>Fashion_x || clothing</title>
   </head>
   <body>
     <div id="root"></div>
